package com.clinica.historiaclinica.domain.model;

public enum EstadoHistoria {
    BORRADOR,
    EN_REVISION,
    FINALIZADA,
    ANULADA
}
