package com.clinica.historiaclinica.domain.model;

public enum OrigenContenido {
    VOZ,
    MANUAL
}
