package com.clinica.historiaclinica.domain.model;

public enum TipoSeccion {
    DATOS_INGRESO,
    ANTECEDENTES,
    TRABAJO_PARTO,
    PARTO,
    RECIEN_NACIDO,
    PUERPERIO,
    MEDICAMENTOS,
    EVOLUCION
}
